--- a/cts_raghu_android_test/res/layout/activity_cts_main.xml
+++ b/cts_raghu_android_test/res/layout/activity_cts_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Refresh"
-        android:visibility="gone" />
+        android:layout_centerHorizontal="true" />
 
     <ListView
         android:id="@+id/listView"
